; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/chelsio/extr_chcr_algo.c_ulptx_walk_end.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/chelsio/extr_chcr_algo.c_ulptx_walk_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ulptx_walk = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@ULP_TX_SC_DSGL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ulptx_walk*)* @ulptx_walk_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ulptx_walk_end(%struct.ulptx_walk* %0) #0 {
  %2 = alloca %struct.ulptx_walk*, align 8
  store %struct.ulptx_walk* %0, %struct.ulptx_walk** %2, align 8
  %3 = load i32, i32* @ULP_TX_SC_DSGL, align 4
  %4 = call i32 @ULPTX_CMD_V(i32 %3)
  %5 = load %struct.ulptx_walk*, %struct.ulptx_walk** %2, align 8
  %6 = getelementptr inbounds %struct.ulptx_walk, %struct.ulptx_walk* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = call i32 @ULPTX_NSGE_V(i32 %7)
  %9 = or i32 %4, %8
  %10 = call i32 @htonl(i32 %9)
  %11 = load %struct.ulptx_walk*, %struct.ulptx_walk** %2, align 8
  %12 = getelementptr inbounds %struct.ulptx_walk, %struct.ulptx_walk* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 %10, i32* %14, align 4
  ret void
}

declare dso_local i32 @htonl(i32) #1

declare dso_local i32 @ULPTX_CMD_V(i32) #1

declare dso_local i32 @ULPTX_NSGE_V(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
